--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-list/blur-elysium-slides-list.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-list/blur-elysium-slides-list.twig
@@ -21,7 +21,7 @@
                     {% block blur_elysium_slides_list_view_smart_bar_header_icon %}
                         <blur-elysium-icon 
                             color="#e868a1"
-                            size="20" />
+                            :size="20" />
                     {% endblock %}
 
                     {% block blur_elysium_slides_list_view_smart_bar_header_title %}
