--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-banner/config/template.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-banner/config/template.twig
@@ -3,7 +3,10 @@
 
         <blur-elysium-device-switch 
             layout="default" 
+            justify="right"
             default-viewport="desktop"
+            :show-labels="false"
+            :gap="20"
             @change-viewport="onChangeViewport" />
 
         <sw-entity-single-select 
