--- a/src/Resources/app/storefront/src/scss/_navigation.scss
+++ b/src/Resources/app/storefront/src/scss/_navigation.scss
@@ -1,44 +1,25 @@
-.blur-esldr__nav-bullet{
-    --blur-esldr-nav-color:                rgba(0,0,0,0.25);
-    --blur-esldr-nav-color-active:         rgba(0,0,0,0.5);
-    aspect-ratio: #{'1 / 1'};
-    width: #{ 'clamp(.75rem, 2vw, 1.25rem)' };
+.blur-esldr__nav {
+    padding: var(--nav-padding-y) var(--nav-padding-x);
+    gap: var(--nav-bullet-gap);
+}
+
+.blur-esldr__nav-bullet {
+    aspect-ratio: var(--nav-bullet-aspect-ratio);
+    width: var(--nav-bullet-size);
+    background-color: var(--nav-bullet-color);
     padding: 0;
     margin: 0;
     border-radius: 10rem;
-    border: 0 none;
+    border: var(--nav-bullet-border-width) solid var(--nav-bullet-border-color);
     cursor: pointer;
     transition: all .3s;
 
-    .blur-esldr__nav.bullet-size__sm & {
-        width: #{ 'clamp(.75rem, 2vw, 1rem)' };
-    }
-
-    .blur-esldr__nav.bullet-size__lg & {
-        width: #{ 'clamp(1rem, 2vw, 1.5rem)' };
+    &.is-active,
+    &:hover {
+        background-color: var(--nav-bullet-color-active);
     }
 
     .blur-esldr__nav.bullet-shape__bar & {
-        aspect-ratio: #{'5 / 1'};
-        width: #{ 'clamp(1rem, 4vw, 2rem)' };
-    }
-
-    .blur-esldr__nav.bullet-shape__bar.bullet-size__lg & {
-        width: #{ 'clamp(1.5rem, 4vw, 3rem)' };
-    }
-}
-
-.blur-esldr__nav{
-    
-    &.padding-sm {
-        padding: #{"min(max( .5rem, 3vw), 1rem)"} !important;
-    }
-    
-    &.padding-md {
-        padding: #{"min(max( 1rem, 3vw), 2rem)"} !important;
-    }
-    
-    &.padding-lg {
-        padding: #{"min(max( 1.5rem, 3vw), 3.5rem)"} !important;
+        --nav-bullet-aspect-ratio: 4 / 1;
     }
 }
