--- a/src/Resources/app/administration/src/component/blur-card-section/template.html.twig
+++ b/src/Resources/app/administration/src/component/blur-card-section/template.html.twig
@@ -1,5 +1,17 @@
 {% block blur_card_section %}
-    <div :style="styles">
+    <div 
+        :class="classes">
+
+        <sw-extension-component-section
+            v-if="positionIdentifier"
+            :position-identifier="`${positionIdentifier}__before`"
+        />
+
         <slot />
+
+        <sw-extension-component-section
+            v-if="positionIdentifier"
+            :position-identifier="`${positionIdentifier}__after`"
+        />
     </div>
 {% endblock %}
