--- a/src/Resources/app/administration/src/component/blur-elysium-device-switch/template.html.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-device-switch/template.html.twig
@@ -14,6 +14,7 @@
                     fontSize: '14px',
                     fontWeight: '500'
                 }"
+                v-if="showLabels === true"
                 v-html="$tc(`blurElysiumBlock.deviceName.${viewport}`)" />
         </div>
     </div>
