--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
@@ -15,7 +15,7 @@
                 />
                 <blur-elysium-icon 
                     color="#e868a1"
-                    size="16" />
+                    :size="16" />
             </router-link>
         </template>
 
