--- a/src/Resources/app/storefront/src/scss/_arrows.scss
+++ b/src/Resources/app/storefront/src/scss/_arrows.scss
@@ -1,14 +1,10 @@
 .blur-esldr__arrow-btn {
-    --blur-esldr-arrows-radius:           20rem;
-    --blur-esldr-arrows-color:          rgba(0,0,0,0.25);
-    --blur-esldr-arrows-color-active:   rgba(0,0,0,.75);
-    --blur-esldr-arrows-bg-color:         transparent;
-    --blur-esldr-arrows-bg-color-active:  transparent;
-    border-radius: var(--blur-esldr-arrows-radius);
-    color: var(--blur-esldr-arrows-color);
-    background-color: var(--blur-esldr-arrows-bg-color);
-    padding: #{' clamp(.5rem, 3vw, 1rem) '};
+    background-color: var(--arrow-bg-color);
+    border: var(--arrow-border-width) solid var(--arrow-border-color);
+    border-radius: var(--arrow-radius);
+    padding: var(--arrow-padding);
     transition: color .3s background-color .3s;
+    color: var(--arrow-icon-color);
 
     &.splide__arrow--prev {
         left: #{' clamp(.5rem, 2vw, 2rem) '};
@@ -32,35 +28,17 @@
     .icon {
         display: block;
         line-height: 1;
-        width: auto;
-        height: auto;
+        width: var(--arrow-icon-size);
+        height: var(--arrow-icon-size);
         color: inherit;
     }
 
     svg {
-        width: #{' clamp(1.25rem, 2vw, 1.75rem) '};
-        height: #{' clamp(1.25rem, 2vw, 1.75rem) '};
         top: auto !important;
     }
 
-    &.arrow-size__sm {
-
-        svg {
-            width: #{' clamp(1rem, 3vw, 1.5rem) '};
-            height: #{' clamp(1rem, 3vw, 1.5rem) '};            
-        }
-    }
-
-    &.arrow-size__lg {
-
-        svg {
-            width: #{' clamp(1.5rem, 3vw, 2.25rem) '};
-            height: #{' clamp(1.5rem, 3vw, 2.25rem) '};            
-        }
-    }
-
     &:hover {
-        color: var(--blur-esldr-arrows-color-active);
-        background-color: var(--blur-esldr-arrows-bg-color-active);
+        color: var(--arrow-icon-color-active);
+        background-color: var(--arrow-bg-color-active);
     }
 }
