--- a/src/Resources/views/storefront/component/blur-elysium-slider/arrows.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slider/arrows.html.twig
@@ -7,23 +7,11 @@
         'translate-middle-y',
         'top-50',
         'border-0',
-        'blur-esldr__arrow-btn',
-        'arrow-size__' ~ config.size
+        'blur-esldr__arrow-btn'
     ] %}
 
     {% set iconPrev = config.icon.default ~ '-left' %}
     {% set iconNext = config.icon.default ~ '-right' %}
-
-    {% if (config.colors.default or config.colors.active) or (config.bgColors.default or config.bgColors.active) is not empty %}
-        <style>
-            #elysiumSlider-{{ elementId }} .blur-esldr__arrow-btn {
-                {% if config.colors.default %}--blur-esldr-arrows-color: {{config.colors.default}};{% endif %}
-                {% if config.bgColors.default %}--blur-esldr-arrows-bg-color: {{config.bgColors.default}};{% endif %}
-                {% if config.colors.active %}--blur-esldr-arrows-color-active: {{config.colors.active}};{% endif %}
-                {% if config.bgColors.active %}--blur-esldr-arrows-bg-color-active: {{config.bgColors.active}};{% endif %}
-            }
-        </style>
-    {% endif %}
 
     {% if config.active %}
         <div class="blur-elysium-slider__controls splide__arrows"
