--- a/src/Resources/views/storefront/element/cms-element-blur-elysium-banner.html.twig
+++ b/src/Resources/views/storefront/element/cms-element-blur-elysium-banner.html.twig
@@ -8,6 +8,25 @@
         <div class="{{ bannerClasses|join(' ') }}"
             data-cms-element-id="{{ element.id }}">
 
+            {{ dump(element.config.viewports.value) }}
+            
+            <style>
+                {# viewport options for cms element #}
+                {% for device, options in element.config.viewports.value %}
+                    @media (min-width: {{ theme_config('breakpoint.' ~ blurElysiumBreakpoints[device])~'px' }}) {
+                        .blur-elysium-banner[data-cms-element-id="{{ element.id }}"] 
+                        .blur-elysium-slide
+                        {
+                            {% if options.aspectRatio.auto is not same as(true) %}
+                                --aspect-ratio: {{options.aspectRatio.width}} / {{options.aspectRatio.height}};
+                            {% else %}
+                                --aspect-ratio: auto;
+                            {% endif %}
+                        }
+                    }            
+                {% endfor %}
+            </style>
+
             {% set slideTemplate = 'default' %}
             {% set slideFile = 'slide.html.twig' %}
 
